--- a/css/ios-fixes.css
+++ b/css/ios-fixes.css
@@ -17,7 +17,8 @@
 }
 
 .nav-button {
-    padding-top: 8px;
+    padding-top: 13px; /* Increased by 5px from previous 8px */
+    margin-top: 5px;
 }
 
 /* Media query for iOS devices - minimal adjustments */
